# ctrip_assistant

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.sisyphus/: DEVELOPMENT_DOC.md  agent-decision-knowledge.md  agent-governance-layered.md  infrastructure-scalability.md  subsystem-redesign.md  upgrade-architecture.md
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
app/db/: __init__.py  async_db.py  base.py  engine_mysql.py
app/governance/: __init__.py  confidence.py  cost.py  feedback.py  provenance.py
app/graph/: __init__.py  fallback.py  graph.py  handoff.py  interrupts.py  lifecycle.py  models.py  registry.py  routing.py  state.py
app/infrastructure/: __init__.py
app/middleware/: __init__.py  auth.py  cors.py  request_id.py
app/schemas/: __init__.py  common.py  graph.py  user.py
app/services/: __init__.py  auth_service.py  graph_service.py  user_service.py
app/utils/: __init__.py
config/: __init__.py  development.yml  log_config.py
db/: __init__.py  dao.py
db/system_mgt/: models.py  user_dao.py
doc/: api-design.md  architecture-design.md  data-design.md  hermes-requirements.md
doc/modules/: 00-index-flowcharts.md  01-integrity-supervision.md  02-risk-monitoring.md  03-internal-control-evaluation.md  04-special-audit.md  (+5 more)
docker/: Dockerfile  docker-compose.yml  nginx.conf  prometheus.yml
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
k8s/: DEPLOYMENT_GUIDE.md  Dockerfile.app  Dockerfile.frontend  deploy.sh  nginx.conf
migrations/: alembic.ini  env.py  script.py.mako
tests/: conftest.py
tools/: __init__.py  car_tools.py  flights_tools.py  hotels_tools.py  init_db.py  retriever_engine.py  retriever_vector.py  trip_tools.py
(+109 files in other folders)
