[project]
name = "ctrip-assistant"
version = "1.0.0"
description = "携程 AI 助手 - 多智能体旅行服务系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "starlette>=0.46",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "mysqlclient>=2.2",
    "aiomysql>=0.2",
    "python-jose[cryptography]>=3.4",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0",
    "redis>=5.0",
    "slowapi>=0.1",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-text-splitters>=0.3",
    "langgraph>=0.2",
    "langgraph-checkpoint>=2.0",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.28",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.28",
]
